[tool.poetry]
name = "UnitedEnergy"
version = "0.1.2"
description = "United energy API to access personal electricity usage"
authors = ["Blake Haydon <blake.a.haydon@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.24.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
