[tool.poetry]
name = "UnitedEnergy"
version = "0.2.0"
description = "United energy API to access personal electricity usage"
authors = ["Blake Haydon <blake.a.haydon@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.24.0"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
black = {version = "^22.6.0", allow-prereleases = true}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
